--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "express": "4.19.2"
+    "express": "4.19.2",
+    "pg": "^8.11.5",
+    "sequelize": "^6.37.3",
+    "zod": "^3.23.8"
   }
 }
